<resources>
    <string name="app_name">CoviSolution</string>
    <string name="search_locations">Search Locations</string>
    <string name="search_glyph_text">No location results to display</string>
    <string name="title_activity_full_map">Map</string>
    <string name="title_activity_details">Location Details</string>
    <string name="details_review_count_format" translatable="false">(%d)</string>
    <string name="current_location_label">Current Location</string>
    <string name="enable">Enable</string>
    <string name="close">Close</string>

    <string name="retry">Retry</string>
    <plurals name="km">
        <item quantity="one">%s Km</item>
        <item quantity="zero">You are here</item>
        <item quantity="other">%s Kms</item>
    </plurals>

    <plurals name="meter">
        <item quantity="one">%s meter</item>
        <item quantity="zero">You are here</item>
        <item quantity="other">%s meters</item>
    </plurals>

    <!-- favorite messages -->
    <string name="added_favorite">Added favorite</string>
    <string name="removed_favorite">Removed favorite</string>

    <!-- error messages -->
    <string name="error_location_data">Location data was invalid can not navigate to details</string>
    <string name="request_failed_main">Unable to retrieve locations</string>
    <string name="request_failed_details">Unable to retrieve location details</string>
    <string name="error_location_permission_denied">Location permission denied, enable?</string>
    <string name="error_closing_no_location_permission">This application requires the use of location services.  Without this permission the application will not function properly and will close.</string>

    <!-- content descriptions -->
    <string name="location_item_icon_description">Location category icon</string>
    <string name="search_glyph_description">Location glyph</string>
    <string name="details_favorite_icon_description">Location is a favorite</string>


    <string name="meantal_health" />
    <string name="_1_sadguru" />
    <string name="sadhguru_2" />
    <string name="back6">BACK</string>
    <string name="textview">TextView</string>
    <string name="back1">BACK</string>
    <string name="next1">NEXT</string>
    <string name="youtube_videos">YouTube Videos</string>
    <string name="next2">NEXT</string>
    <string name="todo">TODO</string>
    <string name="youtube">YouTube</string>
    <string name="breathing_exercises">BREATHING EXERCISES</string>
    <string name="irfhioeg">irfhioeg</string>
    <string name="aiwfouywarg">aiwfouywarg</string>
    <string name="earlfgo">earlfgo</string>
    <string name="airfgigwg">airfgigwg</string>
    <string name="reigkwe">reigkwe</string>
    <string name="aiuuhfiueghi">aiuuhfiueghi</string>
    <string name="eeaurfweuhgweio">eeaurfweuhgweio</string>
    <string name="iuuhgfuierhfoieg">iuuhgfuierhfoieg</string>
    <string name="button">Button</string>
    <string name="back4">back</string>
    <string name="equfho">next</string>
    <string name="backerh">back</string>
    <string name="string_button">uckoff</string>
    <string name="breathing_exercises_dr_vikas_mathur">Breathing Exercises Dr. Vikas Mathur</string>
    <string name="wellness_during_covid_19_basic_breathing_techniques">Wellness during COVID-19: Basic breathing techniques</string>
    <string name="how_to_escape_the_cycle_of_stress_anxiety_and_misery">How to Escape the Cycle of Stress, Anxiety and Misery</string>
    <string name="back">BACK</string>
    <string name="_5_tips_to_improve_your_mental_healthu">5 Tips to Improve your Mental Health</string>
    <string name="sadhguru_with_medical_experts">Sadhguru with Medical Experts​</string>
    <string name="_5_tips_to_improve_your_mental_health">5 Tips to Improve your Mental Health</string>
    <string name="covid_19_and_mental_health">COVID-19 and Mental Health</string>
    <string name="coronavirus_mental_health_and_wellness_during_the_covid_19_pandemic">Coronavirus: Mental Health and Wellness During the COVID-19 Pandemic</string>
    <string name="next">NEXT</string>
    <string name="guif">back</string>
</resources>
